@@ -1,5 +1,5 @@
 /*
- * SPDX-License-Identifier: LGPL-2.1-or-later
+ * SPDX-License-Identifier: Apache-2.0
  * Copyright Red Hat Inc. and Hibernate Authors
  */
 package org.hibernate.query.sqm.internal;
@@ -7,8 +7,8 @@ package org.hibernate.query.sqm.internal;
 import java.sql.Types;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
+import java.util.HashSet;
 import java.util.IdentityHashMap;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
@@ -18,9 +18,11 @@ import java.util.Map;
 import java.util.Set;
 import java.util.StringTokenizer;
 
+import jakarta.persistence.criteria.ParameterExpression;
+import org.hibernate.AssertionFailure;
 import org.hibernate.engine.spi.SessionFactoryImplementor;
 import org.hibernate.engine.spi.SharedSessionContractImplementor;
-import org.hibernate.internal.util.collections.CollectionHelper;
+import org.hibernate.internal.util.collections.Stack;
 import org.hibernate.jpa.spi.JpaCompliance;
 import org.hibernate.metamodel.mapping.BasicValuedMapping;
 import org.hibernate.metamodel.mapping.Bindable;
@@ -34,31 +36,35 @@ import org.hibernate.metamodel.mapping.MappingModelExpressible;
 import org.hibernate.metamodel.mapping.ModelPart;
 import org.hibernate.metamodel.mapping.ModelPartContainer;
 import org.hibernate.metamodel.mapping.PluralAttributeMapping;
+import org.hibernate.metamodel.mapping.ValuedModelPart;
+import org.hibernate.metamodel.mapping.internal.ToOneAttributeMapping;
 import org.hibernate.metamodel.model.domain.BasicDomainType;
-import org.hibernate.metamodel.model.domain.DomainType;
 import org.hibernate.metamodel.model.domain.EntityDomainType;
 import org.hibernate.metamodel.model.domain.IdentifiableDomainType;
 import org.hibernate.metamodel.model.domain.ManagedDomainType;
-import org.hibernate.metamodel.model.domain.SimpleDomainType;
 import org.hibernate.metamodel.model.domain.SingularPersistentAttribute;
 import org.hibernate.metamodel.model.domain.internal.EntitySqmPathSource;
-import org.hibernate.persister.entity.EntityPersister;
+import org.hibernate.metamodel.spi.MappingMetamodelImplementor;
+import org.hibernate.query.IllegalMutationQueryException;
 import org.hibernate.query.IllegalQueryOperationException;
 import org.hibernate.query.IllegalSelectQueryException;
 import org.hibernate.query.Order;
 import org.hibernate.query.QueryTypeMismatchException;
-import org.hibernate.query.criteria.JpaOrder;
+import org.hibernate.query.criteria.JpaRoot;
 import org.hibernate.query.criteria.JpaSelection;
+import org.hibernate.query.restriction.Restriction;
 import org.hibernate.query.spi.QueryParameterBinding;
 import org.hibernate.query.spi.QueryParameterBindings;
 import org.hibernate.query.spi.QueryParameterImplementor;
 import org.hibernate.query.sqm.NodeBuilder;
+import org.hibernate.query.sqm.SqmBindableType;
 import org.hibernate.query.sqm.SqmExpressible;
 import org.hibernate.query.sqm.SqmPathSource;
 import org.hibernate.query.sqm.SqmQuerySource;
 import org.hibernate.query.sqm.spi.JdbcParameterBySqmParameterAccess;
 import org.hibernate.query.sqm.spi.SqmParameterMappingModelResolutionAccess;
 import org.hibernate.query.sqm.sql.SqmToSqlAstConverter;
+import org.hibernate.query.sqm.tree.SqmDeleteOrUpdateStatement;
 import org.hibernate.query.sqm.tree.SqmDmlStatement;
 import org.hibernate.query.sqm.tree.SqmJoinType;
 import org.hibernate.query.sqm.tree.SqmStatement;
@@ -70,10 +76,12 @@ import org.hibernate.query.sqm.tree.expression.SqmExpression;
 import org.hibernate.query.sqm.tree.expression.SqmJpaCriteriaParameterWrapper;
 import org.hibernate.query.sqm.tree.expression.SqmParameter;
 import org.hibernate.query.sqm.tree.expression.SqmTuple;
+import org.hibernate.query.sqm.tree.expression.ValueBindJpaCriteriaParameter;
 import org.hibernate.query.sqm.tree.from.SqmAttributeJoin;
 import org.hibernate.query.sqm.tree.from.SqmFrom;
 import org.hibernate.query.sqm.tree.from.SqmJoin;
 import org.hibernate.query.sqm.tree.from.SqmRoot;
+import org.hibernate.query.sqm.tree.predicate.SqmPredicate;
 import org.hibernate.query.sqm.tree.predicate.SqmWhereClause;
 import org.hibernate.query.sqm.tree.select.SqmOrderByClause;
 import org.hibernate.query.sqm.tree.select.SqmQueryGroup;
@@ -87,6 +95,7 @@ import org.hibernate.spi.NavigablePath;
 import org.hibernate.sql.ast.Clause;
 import org.hibernate.sql.ast.SqlTreeCreationException;
 import org.hibernate.sql.ast.tree.expression.JdbcParameter;
+import org.hibernate.sql.ast.tree.from.TableGroup;
 import org.hibernate.sql.exec.internal.JdbcParameterBindingImpl;
 import org.hibernate.sql.exec.internal.JdbcParameterBindingsImpl;
 import org.hibernate.sql.exec.spi.JdbcParameterBindings;
@@ -98,15 +107,20 @@ import org.hibernate.type.descriptor.java.spi.PrimitiveJavaType;
 import org.hibernate.type.descriptor.jdbc.JdbcType;
 import org.hibernate.type.internal.BasicTypeImpl;
 import org.hibernate.type.internal.ConvertedBasicTypeImpl;
-import org.hibernate.type.spi.TypeConfiguration;
 
 import jakarta.persistence.Tuple;
 import jakarta.persistence.metamodel.Type;
 import org.checkerframework.checker.nullness.qual.Nullable;
 
+import static java.util.Collections.emptyList;
+import static java.util.Collections.emptyMap;
+import static java.util.Collections.emptySet;
+import static java.util.Collections.singleton;
+import static java.util.Collections.unmodifiableSet;
 import static java.util.stream.Collectors.toList;
 import static org.hibernate.internal.util.NullnessUtil.castNonNull;
 import static org.hibernate.internal.util.collections.CollectionHelper.arrayList;
+import static org.hibernate.internal.util.collections.CollectionHelper.determineProperSizing;
 import static org.hibernate.query.sqm.tree.jpa.ParameterCollector.collectParameters;
 
 /**
@@ -124,6 +138,10 @@ public class SqmUtil {
 
 	public static boolean isMutation(SqmStatement<?> sqm) {
 		return sqm instanceof SqmDmlStatement;
+	}
+
+	public static <T> boolean isRestrictedMutation(SqmStatement<T> sqmStatement) {
+		return sqmStatement instanceof SqmDeleteOrUpdateStatement;
 	}
 
 	public static void verifyIsSelectStatement(SqmStatement<?> sqm, String hqlString) {
@@ -159,6 +177,27 @@ public class SqmUtil {
 		);
 	}
 
+	public static void verifyIsRestrictedMutation(SqmStatement<?> sqm, String hqlString) {
+		if ( ! isRestrictedMutation( sqm ) ) {
+			throw new IllegalMutationQueryException(
+					String.format(
+							Locale.ROOT,
+							"Expecting a restricted mutation query [%s], but found %s",
+							SqmDeleteOrUpdateStatement.class.getName(),
+							sqm.getClass().getName()
+					),
+					hqlString
+			);
+		}
+	}
+
+	public static @Nullable String determineAffectedTableName(TableGroup tableGroup, ValuedModelPart mapping) {
+		return tableGroup.getModelPart() instanceof EntityAssociationMapping associationMapping
+			&& !associationMapping.containsTableReference( mapping.getContainingTableExpression() )
+				? associationMapping.getAssociatedEntityMappingType().getMappedTableDetails().getTableName()
+				: null;
+	}
+
 	/**
 	 * Utility that returns the entity association target's mapping type if the specified {@code sqmPath} should
 	 * be dereferenced using the target table, i.e. when the path's lhs is an explicit join that is used in the
@@ -168,48 +207,58 @@ public class SqmUtil {
 			SqmPath<?> sqmPath,
 			ModelPartContainer modelPartContainer,
 			SqmToSqlAstConverter sqlAstCreationState) {
-		final SqmQueryPart<?> queryPart = sqlAstCreationState.getCurrentSqmQueryPart();
-		if ( queryPart != null ) {
-			// We only need to do this for queries
-			final Clause clause = sqlAstCreationState.getCurrentClauseStack().getCurrent();
-			if ( clause != Clause.FROM && modelPartContainer.getPartMappingType() != modelPartContainer && sqmPath.getLhs() instanceof SqmFrom<?, ?> ) {
-				final ModelPart modelPart;
-				if ( modelPartContainer instanceof PluralAttributeMapping ) {
-					modelPart = getCollectionPart(
-							(PluralAttributeMapping) modelPartContainer,
-							castNonNull( sqmPath.getNavigablePath().getParent() )
-					);
-				}
-				else {
-					modelPart = modelPartContainer;
-				}
-				if ( modelPart instanceof EntityAssociationMapping association ) {
-					// If the path is one of the association's target key properties,
-					// we need to render the target side if in group/order by
-					if ( association.getTargetKeyPropertyNames().contains( sqmPath.getReferencedPathSource().getPathName() )
-							&& ( clause == Clause.GROUP || clause == Clause.ORDER
-							|| !isFkOptimizationAllowed( sqmPath.getLhs(), association )
-							|| queryPart.getFirstQuerySpec().groupByClauseContains( sqmPath.getNavigablePath(), sqlAstCreationState )
-							|| queryPart.getFirstQuerySpec().orderByClauseContains( sqmPath.getNavigablePath(), sqlAstCreationState ) ) ) {
-						return association.getAssociatedEntityMappingType();
-					}
-				}
+		// We only need to do this for queries
+		if ( sqlAstCreationState.getCurrentClauseStack().getCurrent() != Clause.FROM
+				&& modelPartContainer.getPartMappingType() != modelPartContainer
+				&& sqmPath.getLhs() instanceof SqmFrom<?, ?> ) {
+			final ModelPart modelPart =
+					modelPartContainer instanceof PluralAttributeMapping plural
+							? getCollectionPart( plural, castNonNull( sqmPath.getNavigablePath().getParent() ) )
+							: modelPartContainer;
+			if ( modelPart instanceof EntityAssociationMapping association
+					&& shouldRenderTargetSide( sqmPath, association, sqlAstCreationState ) ) {
+				return association.getAssociatedEntityMappingType();
 			}
 		}
 		return modelPartContainer;
 	}
 
+	private static boolean shouldRenderTargetSide(
+			SqmPath<?> sqmPath,
+			EntityAssociationMapping association,
+			SqmToSqlAstConverter sqlAstCreationState) {
+		if ( !association.getTargetKeyPropertyNames().contains( sqmPath.getReferencedPathSource().getPathName() ) ) {
+			return false;
+		}
+		else {
+			// If the path is one of the association's target key properties,
+			// we need to render the target side if in group/order by
+			final Clause clause = sqlAstCreationState.getCurrentClauseStack().getCurrent();
+			return clause == Clause.GROUP || clause == Clause.ORDER
+				|| !isFkOptimizationAllowed( sqmPath.getLhs(), association )
+				|| inGroupByOrOrderBy( sqmPath, sqlAstCreationState );
+		}
+	}
+
+	private static boolean inGroupByOrOrderBy(SqmPath<?> sqmPath, SqmToSqlAstConverter converter) {
+		final Stack<SqmQueryPart> queryPartStack = converter.getSqmQueryPartStack();
+		final NavigablePath np = sqmPath.getNavigablePath();
+		final Boolean found = queryPartStack.findCurrentFirst( queryPart -> {
+			final SqmQuerySpec<?> spec = queryPart.getFirstQuerySpec();
+			return spec.groupByClauseContains( np, converter )
+				|| spec.orderByClauseContains( np, converter )
+					? true : null;
+		} );
+		return Boolean.TRUE.equals( found );
+	}
+
 	private static CollectionPart getCollectionPart(PluralAttributeMapping attribute, NavigablePath path) {
 		final CollectionPart.Nature nature = CollectionPart.Nature.fromNameExact( path.getLocalName() );
-		if ( nature != null ) {
-			switch ( nature ) {
-				case ELEMENT:
-					return attribute.getElementDescriptor();
-				case INDEX:
-					return attribute.getIndexDescriptor();
-			}
-		}
-		return null;
+		return nature == null ? null : switch ( nature ) {
+			case ELEMENT -> attribute.getElementDescriptor();
+			case INDEX -> attribute.getIndexDescriptor();
+			case ID -> attribute.getIdentifierDescriptor();
+		};
 	}
 
 	/**
@@ -246,7 +295,13 @@ public class SqmUtil {
 	 * or one that has an explicit on clause predicate.
 	 */
 	public static boolean isFkOptimizationAllowed(SqmPath<?> sqmPath, EntityAssociationMapping associationMapping) {
-		if ( associationMapping.isFkOptimizationAllowed() && sqmPath instanceof SqmJoin<?, ?> sqmJoin ) {
+		// By default, never allow the FK optimization if the path is a join, unless the association has a join table
+		// Hibernate ORM has no way for users to refer to collection/join table rows,
+		// so referring the columns of these rows by default when requesting FK column attributes is sensible.
+		// Users that need to refer to the actual target table columns will have to add an explicit entity join.
+		if ( associationMapping.isFkOptimizationAllowed()
+			&& sqmPath instanceof SqmJoin<?, ?> sqmJoin
+			&& hasJoinTable( associationMapping ) ) {
 			switch ( sqmJoin.getSqmJoinType() ) {
 				case LEFT:
 					if ( isFiltered( associationMapping ) ) {
@@ -262,24 +317,33 @@ public class SqmUtil {
 		return false;
 	}
 
+	private static boolean hasJoinTable(EntityAssociationMapping associationMapping) {
+		if ( associationMapping instanceof CollectionPart collectionPart ) {
+			return !collectionPart.getCollectionAttribute().getCollectionDescriptor().isOneToMany();
+		}
+		else if ( associationMapping instanceof ToOneAttributeMapping toOneAttributeMapping ) {
+			return toOneAttributeMapping.hasJoinTable();
+		}
+		return false;
+	}
+
 	private static boolean isFiltered(EntityAssociationMapping associationMapping) {
 			final EntityMappingType entityMappingType = associationMapping.getAssociatedEntityMappingType();
 			return !associationMapping.isFkOptimizationAllowed()
-					// When the identifier mappings are different we have a joined subclass entity
-					// which will filter rows based on a discriminator predicate
-					|| entityMappingType.getIdentifierMappingForJoin() != entityMappingType.getIdentifierMapping();
+				// When the identifier mappings are different we have a joined subclass entity
+				// which will filter rows based on a discriminator predicate
+				|| entityMappingType.getIdentifierMappingForJoin() != entityMappingType.getIdentifierMapping();
 	}
 
 	private static @Nullable EntityAssociationMapping resolveAssociationMapping(SqmJoin<?, ?> sqmJoin) {
-		if ( sqmJoin instanceof SqmSingularJoin<?, ?> singularJoin ) {
-			if ( singularJoin.getAttribute().getSqmPathType() instanceof EntityDomainType<?> ) {
-				return resolveAssociationMapping( singularJoin );
-			}
-		}
-		return null;
+		return sqmJoin instanceof SqmSingularJoin<?, ?> singularJoin
+			&& singularJoin.getAttribute().getPathType() instanceof EntityDomainType<?>
+				? resolveAssociationMapping( singularJoin )
+				: null;
 	}
 
 	private static @Nullable EntityAssociationMapping resolveAssociationMapping(SqmSingularJoin<?, ?> sqmJoin) {
+		final MappingMetamodelImplementor metamodel = sqmJoin.nodeBuilder().getMappingMetamodel();
 		SingularPersistentAttribute<?, ?> attribute = sqmJoin.getAttribute();
 		ManagedDomainType<?> declaringType = attribute.getDeclaringType();
 		if ( declaringType.getPersistenceType() != Type.PersistenceType.ENTITY ) {
@@ -289,66 +353,62 @@ public class SqmUtil {
 					pathBuilder.insert(0, '.');
 				}
 				pathBuilder.insert( 0, attribute.getName() );
-				final SqmFrom<?, ?> lhs = sqmJoin.getLhs();
-				if ( !(lhs instanceof SqmSingularJoin<?, ?> ) ) {
+				if ( sqmJoin.getLhs() instanceof SqmSingularJoin<?, ?> sqmSingularJoin ) {
+					sqmJoin = sqmSingularJoin;
+					attribute = sqmJoin.getAttribute();
+					declaringType = attribute.getDeclaringType();
+				}
+				else {
 					return null;
 				}
-				sqmJoin = (SqmSingularJoin<?, ?>) lhs;
-				attribute = sqmJoin.getAttribute();
-				declaringType = attribute.getDeclaringType();
-			} while (declaringType.getPersistenceType() != Type.PersistenceType.ENTITY );
+			} while ( declaringType.getPersistenceType() != Type.PersistenceType.ENTITY );
 			pathBuilder.insert(0, '.');
 			pathBuilder.insert( 0, attribute.getName() );
-			final EntityPersister entityDescriptor =
-					sqmJoin.nodeBuilder().getMappingMetamodel()
-							.getEntityDescriptor( ( (EntityDomainType<?>) declaringType ).getHibernateEntityName() );
-			return (EntityAssociationMapping) entityDescriptor.findByPath( pathBuilder.toString() );
+			return (EntityAssociationMapping)
+					metamodel.getEntityDescriptor( ( (EntityDomainType<?>) declaringType ).getHibernateEntityName() )
+							.findByPath( pathBuilder.toString() );
 		}
 		else {
-			final EntityPersister entityDescriptor =
-					sqmJoin.nodeBuilder().getMappingMetamodel()
-							.getEntityDescriptor( ( (EntityDomainType<?>) declaringType ).getHibernateEntityName() );
-			return (EntityAssociationMapping) entityDescriptor.findAttributeMapping( attribute.getName() );
+			return (EntityAssociationMapping)
+					metamodel.getEntityDescriptor( ( (EntityDomainType<?>) declaringType ).getHibernateEntityName() )
+							.findAttributeMapping( attribute.getName() );
 		}
 	}
 
 	public static List<NavigablePath> getWhereClauseNavigablePaths(SqmQuerySpec<?> querySpec) {
 		final SqmWhereClause where = querySpec.getWhereClause();
-		if ( where == null || where.getPredicate() == null ) {
-			return Collections.emptyList();
-		}
+		return where == null || where.getPredicate() == null
+				? emptyList()
+				: collectNavigablePaths( List.of( where.getPredicate() ) );
 
-		return collectNavigablePaths( List.of( where.getPredicate() ) );
 	}
 
 	public static List<NavigablePath> getGroupByNavigablePaths(SqmQuerySpec<?> querySpec) {
 		final List<SqmExpression<?>> expressions = querySpec.getGroupByClauseExpressions();
-		if ( expressions.isEmpty() ) {
-			return Collections.emptyList();
-		}
+		return expressions.isEmpty() ? emptyList() : collectNavigablePaths( expressions );
 
-		return collectNavigablePaths( expressions );
 	}
 
 	public static List<NavigablePath> getOrderByNavigablePaths(SqmQuerySpec<?> querySpec) {
 		final SqmOrderByClause order = querySpec.getOrderByClause();
 		if ( order == null || order.getSortSpecifications().isEmpty() ) {
-			return Collections.emptyList();
+			return emptyList();
 		}
-
-		final List<SqmExpression<?>> expressions = order.getSortSpecifications()
-				.stream()
-				.map( SqmSortSpecification::getSortExpression )
-				.collect( toList() );
-		return collectNavigablePaths( expressions );
+		else {
+			final List<SqmExpression<?>> expressions =
+					order.getSortSpecifications().stream()
+							.map( SqmSortSpecification::getSortExpression )
+							.collect( toList() );
+			return collectNavigablePaths( expressions );
+		}
 	}
 
 	private static List<NavigablePath> collectNavigablePaths(final List<SqmExpression<?>> expressions) {
 		final List<NavigablePath> navigablePaths = arrayList( expressions.size() );
 		final SqmPathVisitor pathVisitor = new SqmPathVisitor( path -> navigablePaths.add( path.getNavigablePath() ) );
 		for ( final SqmExpression<?> expression : expressions ) {
-			if ( expression instanceof SqmAliasedNodeRef ) {
-				final NavigablePath navigablePath = ( (SqmAliasedNodeRef) expression ).getNavigablePath();
+			if ( expression instanceof SqmAliasedNodeRef sqmAliasedNodeRef ) {
+				final NavigablePath navigablePath = sqmAliasedNodeRef.getNavigablePath();
 				if ( navigablePath != null ) {
 					navigablePaths.add( navigablePath );
 				}
@@ -365,7 +425,7 @@ public class SqmUtil {
 			SqmPathSource<A> pathSource,
 			SqmJoinType requestedJoinType) {
 		for ( final SqmJoin<T, ?> join : sqmFrom.getSqmJoins() ) {
-			if ( join.getReferencedPathSource() == pathSource ) {
+			if ( join.getModel() == pathSource ) {
 				final SqmAttributeJoin<T, ?> attributeJoin = (SqmAttributeJoin<T, ?>) join;
 				if ( attributeJoin.isFetched() ) {
 					final SqmJoinType joinType = join.getSqmJoinType();
@@ -390,50 +450,38 @@ public class SqmUtil {
 			DomainParameterXref domainParameterXref,
 			JdbcParameterBySqmParameterAccess jdbcParameterBySqmParameterAccess) {
 		if ( domainParameterXref == null || !domainParameterXref.hasParameters() ) {
-			return Collections.emptyMap();
+			return emptyMap();
 		}
-
-		final int queryParameterCount = domainParameterXref.getQueryParameterCount();
-		final Map<QueryParameterImplementor<?>, Map<SqmParameter<?>, List<JdbcParametersList>>> result = new IdentityHashMap<>( queryParameterCount );
-
-		for ( Map.Entry<QueryParameterImplementor<?>, List<SqmParameter<?>>> entry : domainParameterXref.getQueryParameters().entrySet() ) {
-			final QueryParameterImplementor<?> queryParam = entry.getKey();
-			final List<SqmParameter<?>> sqmParams = entry.getValue();
-
-			final Map<SqmParameter<?>, List<JdbcParametersList>> sqmParamMap = result.computeIfAbsent(
-					queryParam,
-					qp -> new IdentityHashMap<>( sqmParams.size() )
-			);
-
-			for ( SqmParameter<?> sqmParam : sqmParams ) {
-				List<List<JdbcParameter>> lists = jdbcParameterBySqmParameterAccess.getJdbcParamsBySqmParam().get(
-						sqmParam );
-				sqmParamMap.put( sqmParam, convert( lists ) );
-
-				final List<SqmParameter<?>> expansions = domainParameterXref.getExpansions( sqmParam );
-				if ( ! expansions.isEmpty() ) {
-					for ( SqmParameter<?> expansion : expansions ) {
-						List<List<JdbcParameter>> innerList = jdbcParameterBySqmParameterAccess.getJdbcParamsBySqmParam()
-								.get( expansion );
-						sqmParamMap.put( expansion, convert( innerList) );
+		else {
+			final Map<QueryParameterImplementor<?>, Map<SqmParameter<?>, List<JdbcParametersList>>> result =
+					new IdentityHashMap<>( domainParameterXref.getQueryParameterCount() );
+			domainParameterXref.getQueryParameters().forEach( (queryParam, sqmParams) -> {
+				final Map<SqmParameter<?>, List<JdbcParametersList>> sqmParamMap =
+						result.computeIfAbsent( queryParam, qp -> new IdentityHashMap<>( sqmParams.size() ) );
+				for ( SqmParameter<?> sqmParam : sqmParams ) {
+					final var jdbcParamsBySqmParam = jdbcParameterBySqmParameterAccess.getJdbcParamsBySqmParam();
+					sqmParamMap.put( sqmParam, convert( jdbcParamsBySqmParam.get( sqmParam ) ) );
+					for ( SqmParameter<?> expansion : domainParameterXref.getExpansions( sqmParam ) ) {
+						sqmParamMap.put( expansion, convert( jdbcParamsBySqmParam.get( expansion ) ) );
 						result.put( queryParam, sqmParamMap );
 					}
 				}
-			}
+			} );
+			return result;
 		}
-
-		return result;
 	}
 
 	private static List<JdbcParametersList> convert(final List<List<JdbcParameter>> lists) {
 		if ( lists == null ) {
 			return null;
 		}
-		List<JdbcParametersList> output = new ArrayList<>( lists.size() );
-		for ( List<JdbcParameter> element : lists ) {
-			output.add( JdbcParametersList.fromList( element ) );
+		else {
+			final List<JdbcParametersList> output = new ArrayList<>( lists.size() );
+			for ( List<JdbcParameter> element : lists ) {
+				output.add( JdbcParametersList.fromList( element ) );
+			}
+			return output;
 		}
-		return output;
 	}
 
 //	public static JdbcParameterBindings buildJdbcParameterBindings(
@@ -482,153 +530,173 @@ public class SqmUtil {
 			Map<QueryParameterImplementor<?>, Map<SqmParameter<?>, List<JdbcParametersList>>> jdbcParamXref,
 			SqmParameterMappingModelResolutionAccess mappingModelResolutionAccess,
 			SharedSessionContractImplementor session) {
-		final JdbcParameterBindings jdbcParameterBindings = new JdbcParameterBindingsImpl(
-				domainParameterXref.getSqmParameterCount()
-		);
+		final JdbcParameterBindings jdbcParameterBindings =
+				new JdbcParameterBindingsImpl( domainParameterXref.getSqmParameterCount() );
+		domainParameterXref.getQueryParameters()
+				.forEach( (queryParameter, sqmParameters) ->
+						createJdbcParameterBinding(
+								domainParamBindings,
+								domainParameterXref,
+								jdbcParamXref,
+								mappingModelResolutionAccess,
+								session,
+								queryParameter,
+								sqmParameters,
+								jdbcParameterBindings
+						) );
+		return jdbcParameterBindings;
+	}
 
-		for ( Map.Entry<QueryParameterImplementor<?>, List<SqmParameter<?>>> entry :
-				domainParameterXref.getQueryParameters().entrySet() ) {
-			final QueryParameterImplementor<?> queryParam = entry.getKey();
-			final List<SqmParameter<?>> sqmParameters = entry.getValue();
+	private static <T> void createJdbcParameterBinding(
+			QueryParameterBindings domainParamBindings,
+			DomainParameterXref domainParameterXref,
+			Map<QueryParameterImplementor<?>, Map<SqmParameter<?>, List<JdbcParametersList>>> jdbcParamXref,
+			SqmParameterMappingModelResolutionAccess modelResolutionAccess,
+			SharedSessionContractImplementor session,
+			QueryParameterImplementor<T> queryParameter,
+			List<SqmParameter<?>> sqmParameters,
+			JdbcParameterBindings jdbcParameterBindings) {
+		final QueryParameterBinding<T> domainParamBinding = domainParamBindings.getBinding( queryParameter );
+		final var jdbcParamMap = jdbcParamXref.get( queryParameter );
+		for ( SqmParameter<?> sqmParameter : sqmParameters ) {
+			final MappingModelExpressible<T> resolvedMappingModelType =
+					modelResolutionAccess.getResolvedMappingModelType( checkParameter( queryParameter, sqmParameter ) );
+			if ( resolvedMappingModelType != null ) {
+				domainParamBinding.setType( resolvedMappingModelType );
+			}
+			final Bindable parameterType =
+					determineParameterType( domainParamBinding, queryParameter, sqmParameters, modelResolutionAccess,
+							session.getFactory() );
 
-			final QueryParameterBinding<?> domainParamBinding = domainParamBindings.getBinding( queryParam );
-
-			final Map<SqmParameter<?>, List<JdbcParametersList>> jdbcParamMap = jdbcParamXref.get( queryParam );
-			for ( SqmParameter<?> sqmParameter : sqmParameters ) {
-				final MappingModelExpressible resolvedMappingModelType =
-						mappingModelResolutionAccess.getResolvedMappingModelType( sqmParameter );
-				if ( resolvedMappingModelType != null ) {
-					domainParamBinding.setType( resolvedMappingModelType );
+			final List<JdbcParametersList> jdbcParamsBinds = jdbcParamMap.get( sqmParameter );
+			if ( jdbcParamsBinds == null ) {
+				// This can happen when a group or order by item expression, that contains parameters,
+				// is replaced with an alias reference expression, which can happen for JPA Criteria queries
+			}
+			else if ( !domainParamBinding.isBound() ) {
+				for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
+					final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
+					parameterType.forEachJdbcType( (position, jdbcMapping) ->
+							jdbcParameterBindings.addBinding( jdbcParams.get( position ),
+									new JdbcParameterBindingImpl( jdbcMapping, null ) ) );
 				}
-				final Bindable parameterType = determineParameterType(
-						domainParamBinding,
-						queryParam,
-						sqmParameters,
-						mappingModelResolutionAccess,
-						session.getFactory()
-				);
-
-				final List<JdbcParametersList> jdbcParamsBinds = jdbcParamMap.get( sqmParameter );
-				if ( jdbcParamsBinds == null ) {
-					// This can happen when a group or order by item expression, that contains parameters,
-					// is replaced with an alias reference expression, which can happen for JPA Criteria queries
-					continue;
+			}
+			else if ( domainParamBinding.isMultiValued() ) {
+				final Collection<?> bindValues = domainParamBinding.getBindValues();
+				final Iterator<?> valueIterator = bindValues.iterator();
+				// the original SqmParameter is the one we are processing - create a binding for it
+				final Object firstValue = valueIterator.next();
+				for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
+					final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
+					createValueBindings(
+							jdbcParameterBindings,
+							queryParameter,
+							domainParamBinding,
+							parameterType,
+							jdbcParams,
+							firstValue,
+							session
+					);
 				}
-				if ( !domainParamBinding.isBound() ) {
-					for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
-						final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
-						parameterType.forEachJdbcType(
-								(position, jdbcMapping) ->
-										jdbcParameterBindings.addBinding( jdbcParams.get( position ),
-												new JdbcParameterBindingImpl( jdbcMapping, null ) )
-						);
-					}
-				}
-				else if ( domainParamBinding.isMultiValued() ) {
-					final Collection<?> bindValues = domainParamBinding.getBindValues();
-					final Iterator<?> valueItr = bindValues.iterator();
 
-					// the original SqmParameter is the one we are processing.. create a binding for it..
-					final Object firstValue = valueItr.next();
-					for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
-						final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
-						createValueBindings(
-								jdbcParameterBindings,
-								queryParam,
-								domainParamBinding,
-								parameterType,
-								jdbcParams,
-								firstValue,
-								session
-						);
-					}
-
-					// an then one for each of the expansions
-					final List<SqmParameter<?>> expansions = domainParameterXref.getExpansions( sqmParameter );
-					final int expansionCount = bindValues.size() - 1;
-					final int parameterUseCount = jdbcParamsBinds.size();
-					assert expansions.size() == expansionCount * parameterUseCount;
-					int expansionPosition = 0;
-					while ( valueItr.hasNext() ) {
-						final Object expandedValue = valueItr.next();
-						for ( int j = 0; j < parameterUseCount; j++ ) {
-							final SqmParameter<?> expansionSqmParam = expansions.get( expansionPosition + j * expansionCount );
-							final List<JdbcParametersList> jdbcParamBinds = jdbcParamMap.get( expansionSqmParam );
-							for ( int i = 0; i < jdbcParamBinds.size(); i++ ) {
-								JdbcParametersList expansionJdbcParams = jdbcParamBinds.get( i );
-								createValueBindings(
-										jdbcParameterBindings,
-										queryParam,
-										domainParamBinding,
-										parameterType,
-										expansionJdbcParams,
-										expandedValue,
-										session
-								);
-							}
-						}
-						expansionPosition++;
-					}
-				}
-				else {
-					final JdbcMapping jdbcMapping;
-					if ( domainParamBinding.getType() instanceof JdbcMapping ) {
-						jdbcMapping = (JdbcMapping) domainParamBinding.getType();
-					}
-					else if ( domainParamBinding.getBindType() instanceof BasicValuedMapping ) {
-						jdbcMapping = ( (BasicValuedMapping) domainParamBinding.getType() ).getJdbcMapping();
-					}
-					else {
-						jdbcMapping = null;
-					}
-
-					final BasicValueConverter valueConverter = jdbcMapping == null ? null : jdbcMapping.getValueConverter();
-					if ( valueConverter != null ) {
-						final Object convertedValue = valueConverter.toRelationalValue( domainParamBinding.getBindValue() );
-						for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
-							final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
-							assert jdbcParams.size() == 1;
-							final JdbcParameter jdbcParameter = jdbcParams.get( 0 );
-							jdbcParameterBindings.addBinding(
-									jdbcParameter,
-									new JdbcParameterBindingImpl( jdbcMapping, convertedValue )
+				// and then one for each of the expansions
+				final List<SqmParameter<?>> expansions = domainParameterXref.getExpansions( sqmParameter );
+				final int expansionCount = bindValues.size() - 1;
+				final int parameterUseCount = jdbcParamsBinds.size();
+				assert expansions.size() == expansionCount * parameterUseCount;
+				int expansionPosition = 0;
+				while ( valueIterator.hasNext() ) {
+					final Object expandedValue = valueIterator.next();
+					for ( int j = 0; j < parameterUseCount; j++ ) {
+						final SqmParameter<?> expansionSqmParam = expansions.get( expansionPosition + j * expansionCount );
+						final List<JdbcParametersList> jdbcParamBinds = jdbcParamMap.get( expansionSqmParam );
+						for ( int i = 0; i < jdbcParamBinds.size(); i++ ) {
+							final JdbcParametersList expansionJdbcParams = jdbcParamBinds.get( i );
+							createValueBindings(
+									jdbcParameterBindings,
+									queryParameter,
+									domainParamBinding,
+									parameterType,
+									expansionJdbcParams,
+									expandedValue,
+									session
 							);
 						}
 					}
-					else {
-						final Object bindValue = domainParamBinding.getBindValue();
-						if ( bindValue == null ) {
-							for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
-								final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
-								for ( int j = 0; j < jdbcParams.size(); j++ ) {
-									final JdbcParameter jdbcParameter = jdbcParams.get( j );
-									jdbcParameterBindings.addBinding(
-											jdbcParameter,
-											new JdbcParameterBindingImpl( jdbcMapping, bindValue )
-									);
-								}
+					expansionPosition++;
+				}
+			}
+			else {
+				final JdbcMapping jdbcMapping = jdbcMapping( domainParamBinding );
+				final BasicValueConverter valueConverter =
+						jdbcMapping == null ? null : jdbcMapping.getValueConverter();
+				if ( valueConverter != null ) {
+					final Object convertedValue =
+							valueConverter.toRelationalValue( domainParamBinding.getBindValue() );
+					for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
+						final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
+						assert jdbcParams.size() == 1;
+						final JdbcParameter jdbcParameter = jdbcParams.get( 0 );
+						jdbcParameterBindings.addBinding( jdbcParameter,
+								new JdbcParameterBindingImpl( jdbcMapping, convertedValue ) );
+					}
+				}
+				else {
+					final Object bindValue = domainParamBinding.getBindValue();
+					if ( bindValue == null ) {
+						for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
+							final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
+							for ( int j = 0; j < jdbcParams.size(); j++ ) {
+								final JdbcParameter jdbcParameter = jdbcParams.get( j );
+								jdbcParameterBindings.addBinding( jdbcParameter,
+										new JdbcParameterBindingImpl( jdbcMapping, bindValue ) );
 							}
 						}
-						else {
-							for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
-								final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
-								createValueBindings(
-										jdbcParameterBindings,
-										queryParam,
-										domainParamBinding,
-										parameterType,
-										jdbcParams,
-										bindValue,
-										session
-								);
-							}
+					}
+					else {
+						for ( int i = 0; i < jdbcParamsBinds.size(); i++ ) {
+							final JdbcParametersList jdbcParams = jdbcParamsBinds.get( i );
+							createValueBindings(
+									jdbcParameterBindings,
+									queryParameter,
+									domainParamBinding,
+									parameterType,
+									jdbcParams,
+									bindValue,
+									session
+							);
 						}
 					}
 				}
 			}
 		}
+	}
 
-		return jdbcParameterBindings;
+	private static <T> SqmParameter<T> checkParameter
+			(QueryParameterImplementor<T> queryParameter, SqmParameter<?> sqmParameter) {
+		// TODO: currently no robust way to check the types
+//		assert type == sqmParameter.getParameterType()
+//			|| sqmParameter.getParameterType().isAssignableFrom( queryParameter.getParameterType() );
+		assert sqmParameter.getName() == null
+			|| sqmParameter.getName().equals( queryParameter.getName() );
+		assert sqmParameter.getPosition() == null
+			|| sqmParameter.getPosition().equals( queryParameter.getPosition() );
+		@SuppressWarnings("unchecked") // not great!
+		final SqmParameter<T> checkedSqmParameter = (SqmParameter<T>) sqmParameter;
+		return checkedSqmParameter;
+	}
+
+	private static <T> JdbcMapping jdbcMapping(QueryParameterBinding<T> domainParamBinding) {
+		if ( domainParamBinding.getType() instanceof JdbcMapping mapping ) {
+			return mapping;
+		}
+		// TODO: why do the test and the cast disagree here? getBindType() vs getType()
+		else if ( domainParamBinding.getBindType() instanceof BasicValuedMapping ) {
+			return ( (BasicValuedMapping) domainParamBinding.getType() ).getJdbcMapping();
+		}
+		else {
+			return null;
+		}
 	}
 
 	private static void createValueBindings(
@@ -640,60 +708,83 @@ public class SqmUtil {
 			Object bindValue,
 			SharedSessionContractImplementor session) {
 		if ( parameterType == null ) {
-			throw new SqlTreeCreationException( "Unable to interpret mapping-model type for Query parameter : " + domainParam );
+			throw new SqlTreeCreationException( "Unable to interpret mapping-model type for Query parameter: " + domainParam );
 		}
-		else if ( parameterType instanceof PluralAttributeMapping ) {
-			// Default to the collection element
-			parameterType = ( (PluralAttributeMapping) parameterType ).getElementDescriptor();
-		}
-
-		if ( parameterType instanceof EntityIdentifierMapping identifierMapping ) {
-			final EntityMappingType entityMapping = identifierMapping.findContainingEntityMapping();
-			if ( entityMapping.getRepresentationStrategy().getInstantiator().isInstance( bindValue, session.getFactory() ) ) {
-				bindValue = identifierMapping.getIdentifierIfNotUnsaved( bindValue, session );
-			}
-		}
-		else if ( parameterType instanceof EntityMappingType ) {
-			final EntityIdentifierMapping identifierMapping = ( (EntityMappingType) parameterType ).getIdentifierMapping();
-			final EntityMappingType entityMapping = identifierMapping.findContainingEntityMapping();
-			parameterType = identifierMapping;
-			if ( entityMapping.getRepresentationStrategy().getInstantiator().isInstance( bindValue, session.getFactory() ) ) {
-				bindValue = identifierMapping.getIdentifierIfNotUnsaved( bindValue, session );
-			}
-		}
-		else if ( parameterType instanceof EntityAssociationMapping association ) {
-			if ( association.getSideNature() == ForeignKeyDescriptor.Nature.TARGET ) {
-				// If the association is the target, we must use the identifier of the EntityMappingType
-				bindValue = association.getAssociatedEntityMappingType().getIdentifierMapping()
-						.getIdentifier( bindValue );
-				parameterType = association.getAssociatedEntityMappingType().getIdentifierMapping();
-			}
-			else {
-				bindValue = association.getForeignKeyDescriptor().getAssociationKeyFromSide(
-						bindValue,
-						association.getSideNature().inverse(),
+		final int offset =
+				jdbcParameterBindings.registerParametersForEachJdbcValue(
+						bindValue( parameterType, bindValue, session ),
+						parameterType( domainParamBinding, parameterType ),
+						jdbcParams,
 						session
 				);
-				parameterType = association.getForeignKeyDescriptor();
-			}
+		assert offset == jdbcParams.size();
+	}
+
+	private static Object bindValue(
+			Bindable parameterType, Object bindValue, SharedSessionContractImplementor session) {
+		if ( parameterType instanceof EntityIdentifierMapping identifierMapping ) {
+			return getIdentifier( bindValue, session, identifierMapping );
 		}
-		else if ( parameterType instanceof JavaObjectType ) {
-			parameterType = domainParamBinding.getType();
+		else if ( parameterType instanceof EntityMappingType entityMappingType ) {
+			return getIdentifier( bindValue, session, entityMappingType.getIdentifierMapping() );
+		}
+		else if ( parameterType instanceof EntityAssociationMapping association ) {
+			// If the association is the target, we must use the identifier of the EntityMappingType
+			return getIdentifier( bindValue, session, association );
+		}
+		else {
+			return bindValue;
+		}
+	}
+
+	private static Object getIdentifier
+			(Object bindValue, SharedSessionContractImplementor session, EntityAssociationMapping association) {
+		return association.getSideNature() == ForeignKeyDescriptor.Nature.TARGET
+				? association.getAssociatedEntityMappingType()
+				.getIdentifierMapping().getIdentifier( bindValue )
+				: association.getForeignKeyDescriptor()
+						.getAssociationKeyFromSide( bindValue, association.getSideNature().inverse(), session );
+	}
+
+	private static Object getIdentifier
+			(Object bindValue, SharedSessionContractImplementor session, EntityIdentifierMapping identifierMapping) {
+		return identifierMapping.findContainingEntityMapping().getRepresentationStrategy()
+						.getInstantiator().isInstance( bindValue )
+				? identifierMapping.getIdentifierIfNotUnsaved( bindValue, session )
+				: bindValue;
+	}
+
+	private static Bindable parameterType(
+			QueryParameterBinding<?> domainParamBinding, Bindable parameterType) {
+		if ( parameterType instanceof PluralAttributeMapping pluralAttributeMapping ) {
+			// Default to the collection element
+			parameterType = pluralAttributeMapping.getElementDescriptor();
 		}
 
-		int offset = jdbcParameterBindings.registerParametersForEachJdbcValue(
-				bindValue,
-				parameterType,
-				jdbcParams,
-				session
-		);
-		assert offset == jdbcParams.size();
+		if ( parameterType instanceof EntityIdentifierMapping ) {
+			return parameterType;
+		}
+		else if ( parameterType instanceof EntityMappingType entityMappingType ) {
+			return entityMappingType.getIdentifierMapping();
+		}
+		else if ( parameterType instanceof EntityAssociationMapping association ) {
+			// If the association is the target, we must use the identifier of the EntityMappingType
+			return association.getSideNature() == ForeignKeyDescriptor.Nature.TARGET
+					? association.getAssociatedEntityMappingType().getIdentifierMapping()
+					: association.getForeignKeyDescriptor();
+		}
+		else if ( parameterType instanceof JavaObjectType ) {
+			return domainParamBinding.getType();
+		}
+		else {
+			return parameterType;
+		}
 	}
 
 	public static Bindable determineParameterType(
 			QueryParameterBinding<?> binding,
 			QueryParameterImplementor<?> parameter,
-			List<SqmParameter<?>> sqmParameters,
+			List<? extends SqmParameter<?>> sqmParameters,
 			SqmParameterMappingModelResolutionAccess mappingModelResolutionAccess,
 			SessionFactoryImplementor sessionFactory) {
 
@@ -716,17 +807,16 @@ public class SqmUtil {
 		}
 
 		for ( int i = 0; i < sqmParameters.size(); i++ ) {
-			final MappingModelExpressible<?> mappingModelType = mappingModelResolutionAccess
-					.getResolvedMappingModelType( sqmParameters.get( i ) );
+			final MappingModelExpressible<?> mappingModelType =
+					mappingModelResolutionAccess.getResolvedMappingModelType( sqmParameters.get( i ) );
 			if ( mappingModelType != null ) {
 				return mappingModelType;
 			}
 		}
 
-		final TypeConfiguration typeConfiguration = sessionFactory.getTypeConfiguration();
-
 		// assume we have (or can create) a mapping for the parameter's Java type
-		return typeConfiguration.standardBasicTypeForJavaType( parameter.getParameterType() );
+		return sessionFactory.getTypeConfiguration()
+				.standardBasicTypeForJavaType( parameter.getParameterType() );
 	}
 
 	/**
@@ -734,26 +824,26 @@ public class SqmUtil {
 	 * Returns the passes object after casting it to Bindable,
 	 * if the type is compatible.
 	 * If it's not, null will be returned.
-	 * @param o any object instance
+	 * @param object any object instance
 	 * @return a reference to the same object o, but of type Bindable if possible, or null.
 	 */
-	private static Bindable asBindable(final Object o) {
-		if ( o == null ) {
+	private static Bindable asBindable(final Object object) {
+		if ( object == null ) {
 			return null;
 		}
 		//There's a high chance that we're dealing with a BasicTypeImpl, or a subclass of it.
-		else if ( o instanceof BasicTypeImpl<?> basicType ) {
+		else if ( object instanceof BasicTypeImpl<?> basicType ) {
 			return basicType;
 		}
 		//Alternatively, chances are good that we're dealing with an ConvertedBasicTypeImpl.
-		else if ( o instanceof ConvertedBasicTypeImpl<?> convertedBasicType ) {
+		else if ( object instanceof ConvertedBasicTypeImpl<?> convertedBasicType ) {
 			return convertedBasicType;
 		}
+		//Eventually fallback to the standard check for completeness:
+		else if ( object instanceof Bindable bindable ) {
+			return bindable;
+		}
 		else {
-			//Eventually fallback to the standard check for completeness:
-			if ( o instanceof Bindable ) {
-				return (Bindable) o;
-			}
 			return null;
 		}
 	}
@@ -773,48 +863,41 @@ public class SqmUtil {
 
 				@Override
 				public Map<JpaCriteriaParameter<?>, SqmJpaCriteriaParameterWrapper<?>> getJpaCriteriaParamResolutions() {
-					return Collections.emptyMap();
+					return emptyMap();
 				}
 			};
 		}
 	}
 
-	static JpaOrder sortSpecification(SqmSelectStatement<?> sqm, Order<?> order) {
+	public static SqmSortSpecification sortSpecification(SqmSelectStatement<?> sqm, Order<?> order) {
 		final List<SqmSelectableNode<?>> items = sqm.getQuerySpec().getSelectClause().getSelectionItems();
-		int element = order.getElement();
-		if ( element < 1) {
-			throw new IllegalQueryOperationException("Cannot order by element " + element
-					+ " (the first select item is element 1)");
-		}
-		if ( element > items.size() ) {
-			throw new IllegalQueryOperationException("Cannot order by element " + element
-					+ " (there are only " + items.size() + " select items)");
-		}
-		final SqmSelectableNode<?> selected = items.get( element-1 );
+		final SqmSelectableNode<?> selected = selectedNode( sqm, order ); // does validation by side effect!
+		return createSortSpecification( sqm, order, items, selected );
+	}
 
+	private static SqmSortSpecification createSortSpecification(
+			SqmSelectStatement<?> sqm, Order<?> order, List<SqmSelectableNode<?>> items, SqmSelectableNode<?> selected) {
 		final NodeBuilder builder = sqm.nodeBuilder();
-		if ( order.getEntityClass() == null ) {
+		if ( order.entityClass() == null ) {
 			// ordering by an element of the select list
 			return new SqmSortSpecification(
-					new SqmAliasedNodeRef( element, builder.getIntegerType(), builder ),
-					order.getDirection(),
-					order.getNullPrecedence().getJpaValue(),
-					order.isCaseInsensitive()
+					new SqmAliasedNodeRef( order.element(), builder.getIntegerType(), builder ),
+					order.direction(), order.nullPrecedence(), !order.caseSensitive()
 			);
 		}
 		else {
 			// ordering by an attribute of the returned entity
-			if ( items.size() == 1) {
+			if ( items.size() <= 1) {
 				if ( selected instanceof SqmFrom<?, ?> root ) {
-					if ( !order.getEntityClass().isAssignableFrom( root.getJavaType() ) ) {
+					if ( !order.entityClass().isAssignableFrom( root.getJavaType() ) ) {
 						throw new IllegalQueryOperationException("Select item was of wrong entity type");
 					}
-					final StringTokenizer tokens = new StringTokenizer( order.getAttributeName(), "." );
+					final StringTokenizer tokens = new StringTokenizer( order.attributeName(), "." );
 					SqmPath<?> path = root;
 					while ( tokens.hasMoreTokens() ) {
 						path = path.get( tokens.nextToken() );
 					}
-					return builder.sort( path, order.getDirection(), order.getNullPrecedence(), order.isCaseInsensitive() );
+					return builder.sort( path, order.direction(), order.nullPrecedence(), !order.caseSensitive() );
 				}
 				else {
 					throw new IllegalQueryOperationException("Select item was not an entity type");
@@ -826,10 +909,43 @@ public class SqmUtil {
 		}
 	}
 
+	private static SqmSelectableNode<?> selectedNode(SqmSelectStatement<?> sqm, Order<?> order) {
+		final int element = order.element();
+		if ( element < 1) {
+			throw new IllegalQueryOperationException("Cannot order by element " + element
+					+ " (the first select item is element 1)");
+		}
+		final var selectionItems = sqm.getQuerySpec().getSelectClause().getSelectionItems();
+		final int items = selectionItems.size();
+		if ( items == 0 && element == 1 ) {
+			if ( order.entityClass() == null || sqm.getQuerySpec().getRootList().size() > 1 ) {
+				throw new IllegalQueryOperationException("Cannot order by element " + element
+						+ " (there is no select list)");
+			}
+			else {
+				return sqm.getQuerySpec().getRootList().get(0);
+			}
+		}
+		else if ( element > items ) {
+			throw new IllegalQueryOperationException( "Cannot order by element " + element
+					+ " (there are only " + items + " select items)");
+		}
+		else {
+			return selectionItems.get( element - 1 );
+		}
+	}
+
 	public static boolean isSelectionAssignableToResultType(SqmSelection<?> selection, Class<?> expectedResultType) {
-		if ( expectedResultType == null
-				|| selection != null && selection.getSelectableNode() instanceof SqmParameter ) {
+		if ( expectedResultType == null ) {
 			return true;
+		}
+		else if ( selection != null && selection.getSelectableNode() instanceof SqmParameter<?> sqmParameter ) {
+			final Class<?> anticipatedClass =
+					sqmParameter.getAnticipatedType() != null
+							? sqmParameter.getAnticipatedType().getJavaType()
+							: null;
+			return anticipatedClass != null
+				&& expectedResultType.isAssignableFrom( anticipatedClass );
 		}
 		else if ( selection == null
 				|| !isHqlTuple( selection ) && selection.getSelectableNode().isCompoundSelection() ) {
@@ -853,6 +969,42 @@ public class SqmUtil {
 				: expressible.getExpressibleJavaType().getJavaTypeClass();
 	}
 
+	public static <X> SqmPredicate restriction(
+			SqmSelectStatement<X> sqmStatement,
+			Class<X> resultType,
+			Restriction<? super X> restriction) {
+		//noinspection unchecked
+		final JpaRoot<X> root = (JpaRoot<X>) sqmStatement.getRoot( 0, resultType );
+		return  (SqmPredicate) restriction.toPredicate( root, sqmStatement.nodeBuilder() );
+	}
+
+	public static void validateCriteriaQuery(SqmQueryPart<?> queryPart) {
+		if ( queryPart instanceof SqmQuerySpec<?> sqmQuerySpec ) {
+			if ( sqmQuerySpec.getSelectClause().getSelections().isEmpty() ) {
+				// make sure there is at least one root
+				final List<SqmRoot<?>> sqmRoots = sqmQuerySpec.getFromClause().getRoots();
+				if ( sqmRoots == null || sqmRoots.isEmpty() ) {
+					throw new IllegalArgumentException( "Criteria did not define any query roots" );
+				}
+				// if there is a single root, use that as the selection
+				if ( sqmRoots.size() == 1 ) {
+					sqmQuerySpec.getSelectClause().add( sqmRoots.get( 0 ), null );
+				}
+				else {
+					throw new IllegalArgumentException( "Criteria has multiple query roots" );
+				}
+			}
+		}
+		else if ( queryPart instanceof SqmQueryGroup<?> queryGroup ) {
+			for ( SqmQueryPart<?> part : queryGroup.getQueryParts() ) {
+				validateCriteriaQuery( part );
+			}
+		}
+		else {
+			assert false;
+		}
+	}
+
 	private static class CriteriaParameterCollector {
 		private Set<SqmParameter<?>> sqmParameters;
 		private Map<JpaCriteriaParameter<?>, List<SqmJpaCriteriaParameterWrapper<?>>> jpaCriteriaParamResolutions;
@@ -867,14 +1019,8 @@ public class SqmUtil {
 					jpaCriteriaParamResolutions = new IdentityHashMap<>();
 				}
 
-				final JpaCriteriaParameter<?> criteriaParameter = wrapper.getJpaCriteriaParameter();
-
-				final List<SqmJpaCriteriaParameterWrapper<?>> sqmParametersForCriteriaParameter = jpaCriteriaParamResolutions.computeIfAbsent(
-						criteriaParameter,
-						jcp -> new ArrayList<>()
-				);
-
-				sqmParametersForCriteriaParameter.add( wrapper );
+				jpaCriteriaParamResolutions.computeIfAbsent( wrapper.getJpaCriteriaParameter(), r -> new ArrayList<>() )
+						.add( wrapper );
 				sqmParameters.add( wrapper );
 			}
 			else if ( parameter instanceof JpaCriteriaParameter ) {
@@ -906,8 +1052,8 @@ public class SqmUtil {
 
 		private SqmStatement.ParameterResolutions makeResolution() {
 			return new ParameterResolutionsImpl(
-					sqmParameters == null ? Collections.emptySet() : sqmParameters,
-					jpaCriteriaParamResolutions == null ? Collections.emptyMap() : jpaCriteriaParamResolutions
+					sqmParameters == null ? emptySet() : sqmParameters,
+					jpaCriteriaParamResolutions == null ? emptyMap() : jpaCriteriaParamResolutions
 			);
 		}
 	}
@@ -922,15 +1068,18 @@ public class SqmUtil {
 			this.sqmParameters = sqmParameters;
 
 			if ( jpaCriteriaParamResolutions == null || jpaCriteriaParamResolutions.isEmpty() ) {
-				this.jpaCriteriaParamResolutions = Collections.emptyMap();
+				this.jpaCriteriaParamResolutions = emptyMap();
 			}
 			else {
-				this.jpaCriteriaParamResolutions = new IdentityHashMap<>( CollectionHelper.determineProperSizing( jpaCriteriaParamResolutions ) );
-				for ( Map.Entry<JpaCriteriaParameter<?>, List<SqmJpaCriteriaParameterWrapper<?>>> entry : jpaCriteriaParamResolutions.entrySet() ) {
+				this.jpaCriteriaParamResolutions =
+						new IdentityHashMap<>( determineProperSizing( jpaCriteriaParamResolutions ) );
+				for ( Map.Entry<JpaCriteriaParameter<?>, List<SqmJpaCriteriaParameterWrapper<?>>> entry
+						: jpaCriteriaParamResolutions.entrySet() ) {
 					final Iterator<SqmJpaCriteriaParameterWrapper<?>> itr = entry.getValue().iterator();
 					if ( !itr.hasNext() ) {
 						throw new IllegalStateException(
-								"SqmJpaCriteriaParameterWrapper references for JpaCriteriaParameter [" + entry.getKey() + "] already exhausted" );
+								"SqmJpaCriteriaParameterWrapper references for JpaCriteriaParameter ["
+										+ entry.getKey() + "] already exhausted" );
 					}
 					this.jpaCriteriaParamResolutions.put( entry.getKey(), itr.next() );
 				}
@@ -963,14 +1112,16 @@ public class SqmUtil {
 	 * Similar to {@link #validateQueryReturnType(SqmQueryPart, Class)} but does not check if {@link #isResultTypeAlwaysAllowed(Class)}.
 	 */
 	public static void checkQueryReturnType(SqmQueryPart<?> queryPart, Class<?> expectedResultType) {
-		if ( queryPart instanceof SqmQuerySpec<?> ) {
-			checkQueryReturnType( (SqmQuerySpec<?>) queryPart, expectedResultType );
+		if ( queryPart instanceof SqmQuerySpec<?> querySpec ) {
+			checkQueryReturnType( querySpec, expectedResultType );
 		}
-		else {
-			final SqmQueryGroup<?> queryGroup = (SqmQueryGroup<?>) queryPart;
+		else if ( queryPart instanceof SqmQueryGroup<?> queryGroup ) {
 			for ( SqmQueryPart<?> sqmQueryPart : queryGroup.getQueryParts() ) {
 				checkQueryReturnType( sqmQueryPart, expectedResultType );
 			}
+		}
+		else {
+			throw new AssertionFailure( "Unexpected query part" );
 		}
 	}
 
@@ -1012,6 +1163,7 @@ public class SqmUtil {
 				verifySelectionType( componentType, jpaCompliance, selection.getSelectableNode() );
 			}
 		}
+		//TODO: else check that the expectedResultClass has an appropriate constructor
 	}
 
 	/**
@@ -1072,10 +1224,18 @@ public class SqmUtil {
 		}
 
 		if ( !jpaCompliance.isJpaQueryComplianceEnabled() ) {
-			verifyResultType( expectedResultClass, selection.getExpressible() );
+			verifyResultType( expectedResultClass, selection );
 		}
 	}
 
+	/**
+	 * Any query result can be represented as a {@link Tuple}, {@link List}, or {@link Map},
+	 * simply by repackaging the result tuple. Also, any query result is assignable to
+	 * {@code Object}, or can be returned as an instance of {@code Object[]}.
+	 *
+	 * @see ConcreteSqmSelectQueryPlan#determineRowTransformer
+	 * @see org.hibernate.query.sql.internal.NativeQueryImpl#determineTupleTransformerForResultType
+	 */
 	public static boolean isResultTypeAlwaysAllowed(Class<?> expectedResultClass) {
 		return expectedResultClass == null
 			|| expectedResultClass == Object.class
@@ -1085,55 +1245,44 @@ public class SqmUtil {
 			|| expectedResultClass == Tuple.class;
 	}
 
-	protected static void verifyResultType(Class<?> resultClass, @Nullable SqmExpressible<?> selectionExpressible) {
-		if ( selectionExpressible == null ) {
-			// nothing we can validate
-			return;
-		}
-
-		final JavaType<?> selectionExpressibleJavaType = selectionExpressible.getExpressibleJavaType();
-		if ( selectionExpressibleJavaType == null ) {
-			// nothing we can validate
-			return;
-		}
-
-		final Class<?> selectionExpressibleJavaTypeClass = selectionExpressibleJavaType.getJavaTypeClass();
-		if ( selectionExpressibleJavaTypeClass != Object.class ) {
-			// performs a series of opt-out checks for validity... each if branch and return indicates a valid case
-			if ( resultClass.isAssignableFrom( selectionExpressibleJavaTypeClass ) ) {
-				return;
-			}
-
-			if ( selectionExpressibleJavaType instanceof final PrimitiveJavaType<?> primitiveJavaType ) {
-				if ( primitiveJavaType.getPrimitiveClass() == resultClass ) {
-					return;
+	protected static void verifyResultType(Class<?> resultClass, SqmSelectableNode<?> selectableNode) {
+		final SqmBindableType<?> selectionExpressible = selectableNode.getExpressible();
+		final JavaType<?> javaType =
+				selectionExpressible == null
+						? selectableNode.getNodeJavaType() // for SqmDynamicInstantiation
+						: selectionExpressible.getExpressibleJavaType();
+		if ( javaType != null ) {
+			final Class<?> javaTypeClass = javaType.getJavaTypeClass();
+			if ( javaTypeClass != Object.class ) {
+				if ( !isValid( resultClass, selectionExpressible, javaTypeClass, javaType ) ) {
+					throwQueryTypeMismatchException( resultClass, selectionExpressible, javaTypeClass );
 				}
 			}
-
-			if ( isMatchingDateType( selectionExpressibleJavaTypeClass, resultClass, selectionExpressible ) ) {
-				return;
-			}
-
-			if ( isEntityIdType( selectionExpressible, resultClass ) ) {
-				return;
-			}
-
-			throwQueryTypeMismatchException( resultClass, selectionExpressible );
 		}
+	}
+
+	private static boolean isValid(
+			Class<?> resultClass,
+			SqmExpressible<?> selectionExpressible,
+			Class<?> selectionExpressibleJavaTypeClass,
+			JavaType<?> selectionExpressibleJavaType) {
+		return resultClass.isAssignableFrom( selectionExpressibleJavaTypeClass )
+			|| selectionExpressibleJavaType instanceof final PrimitiveJavaType<?> primitiveJavaType
+					&& primitiveJavaType.getPrimitiveClass() == resultClass
+			|| isMatchingDateType( selectionExpressibleJavaTypeClass, resultClass, selectionExpressible )
+			|| isEntityIdType( selectionExpressible, resultClass );
 	}
 
 	private static boolean isEntityIdType(SqmExpressible<?> selectionExpressible, Class<?> resultClass) {
 		if ( selectionExpressible instanceof IdentifiableDomainType<?> identifiableDomainType ) {
-			final SimpleDomainType<?> idType = identifiableDomainType.getIdType();
-			return resultClass.isAssignableFrom( idType.getBindableJavaType() );
+			return resultClass.isAssignableFrom( identifiableDomainType.getIdType().getJavaType() );
 		}
 		else if ( selectionExpressible instanceof EntitySqmPathSource<?> entityPath ) {
-			final EntityDomainType<?> entityType = entityPath.getSqmPathType();
-			final SimpleDomainType<?> idType = entityType.getIdType();
-			return resultClass.isAssignableFrom( idType.getBindableJavaType() );
+			return resultClass.isAssignableFrom( entityPath.getPathType().getIdType().getJavaType() );
 		}
-
-		return false;
+		else {
+			return false;
+		}
 	}
 
 	// Special case for date because we always report java.util.Date as expression type
@@ -1143,17 +1292,16 @@ public class SqmUtil {
 			Class<?> resultClass,
 			SqmExpressible<?> sqmExpressible) {
 		return javaTypeClass == Date.class
-				&& isMatchingDateJdbcType( resultClass, getJdbcType( sqmExpressible ) );
+			&& isMatchingDateJdbcType( resultClass, getJdbcType( sqmExpressible ) );
 	}
 
 	private static JdbcType getJdbcType(SqmExpressible<?> sqmExpressible) {
-		if ( sqmExpressible instanceof BasicDomainType<?> ) {
-			return ( (BasicDomainType<?>) sqmExpressible).getJdbcType();
+		if ( sqmExpressible instanceof BasicDomainType<?> basicDomainType ) {
+			return basicDomainType.getJdbcType();
 		}
 		else if ( sqmExpressible instanceof SqmPathSource<?> pathSource ) {
-			final DomainType<?> domainType = pathSource.getSqmPathType();
-			if ( domainType instanceof BasicDomainType<?> ) {
-				return ( (BasicDomainType<?>) domainType ).getJdbcType();
+			if ( pathSource.getPathType() instanceof BasicDomainType<?> basicDomainType ) {
+				return basicDomainType.getJdbcType();
 			}
 		}
 		return null;
@@ -1173,11 +1321,37 @@ public class SqmUtil {
 		}
 	}
 
-	private static void throwQueryTypeMismatchException(Class<?> resultClass, SqmExpressible<?> sqmExpressible) {
+	private static void throwQueryTypeMismatchException(
+			Class<?> resultClass,
+			@Nullable SqmExpressible<?> sqmExpressible, @Nullable Class<?> javaTypeClass) {
 		throw new QueryTypeMismatchException( String.format(
-				"Specified result type [%s] did not match Query selection type [%s] - multiple selections: use Tuple or array",
-				resultClass.getName(),
-				sqmExpressible.getTypeName()
+				Locale.ROOT,
+				"Incorrect query result type: query produces '%s' but type '%s' was given",
+				sqmExpressible == null ? javaTypeClass.getName() : sqmExpressible.getTypeName(),
+				resultClass.getName()
 		) );
+	}
+
+	public static Set<ParameterExpression<?>> getParameters(SqmStatement<?> statement) {
+		final Set<SqmParameter<?>> parameters = statement.getSqmParameters();
+		return switch ( parameters.size() ) {
+			case 0 -> emptySet();
+			case 1 -> {
+				final SqmParameter<?> parameter = parameters.iterator().next();
+				yield parameter instanceof ValueBindJpaCriteriaParameter
+						? emptySet()
+						: singleton( parameter );
+			}
+			default -> {
+				final Set<ParameterExpression<?>> parameterExpressions =
+						new HashSet<>( parameters.size() );
+				for ( SqmParameter<?> parameter : parameters ) {
+					if ( !(parameter instanceof ValueBindJpaCriteriaParameter) ) {
+						parameterExpressions.add( parameter );
+					}
+				}
+				yield unmodifiableSet( parameterExpressions );
+			}
+		};
 	}
 }
