@@ -1,28 +1,34 @@
 /*
- * SPDX-License-Identifier: LGPL-2.1-or-later
+ * SPDX-License-Identifier: Apache-2.0
  * Copyright Red Hat Inc. and Hibernate Authors
  */
 package org.hibernate.query.sqm.tree.select;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.Function;
 
+import org.hibernate.AssertionFailure;
 import org.hibernate.metamodel.model.domain.EntityDomainType;
 import org.hibernate.query.criteria.JpaCteCriteria;
+import org.hibernate.query.criteria.JpaFunctionRoot;
 import org.hibernate.query.criteria.JpaRoot;
 import org.hibernate.query.criteria.JpaSelection;
+import org.hibernate.query.criteria.JpaSetReturningFunction;
 import org.hibernate.query.sqm.NodeBuilder;
 import org.hibernate.query.sqm.spi.SqmCreationHelper;
 import org.hibernate.query.sqm.tree.AbstractSqmNode;
 import org.hibernate.query.sqm.tree.SqmCopyContext;
+import org.hibernate.query.sqm.tree.SqmRenderContext;
 import org.hibernate.query.sqm.tree.cte.SqmCteStatement;
 import org.hibernate.query.sqm.tree.domain.SqmCteRoot;
 import org.hibernate.query.sqm.tree.domain.SqmDerivedRoot;
+import org.hibernate.query.sqm.tree.domain.SqmFunctionRoot;
+import org.hibernate.query.sqm.tree.expression.SqmSetReturningFunction;
 import org.hibernate.query.sqm.tree.from.SqmRoot;
 import org.hibernate.query.sqm.tree.predicate.SqmPredicate;
 
@@ -36,11 +42,12 @@ import jakarta.persistence.criteria.Subquery;
 import jakarta.persistence.metamodel.EntityType;
 
 import static java.lang.Character.isAlphabetic;
+import static java.util.Collections.unmodifiableList;
+import static java.util.Collections.unmodifiableSet;
 
 /**
  * @author Steve Ebersole
  */
-@SuppressWarnings("unchecked")
 public abstract class AbstractSqmSelectQuery<T>
 		extends AbstractSqmNode
 		implements SqmSelectQuery<T> {
@@ -96,6 +103,10 @@ public abstract class AbstractSqmSelectQuery<T>
 		return new LinkedHashMap<>( cteStatements );
 	}
 
+	void addCteStatements(Map<String, SqmCteStatement<?>> cteStatements) {
+		this.cteStatements.putAll( cteStatements );
+	}
+
 	@Override
 	public SqmCteStatement<?> getCteStatement(String cteLabel) {
 		return cteStatements.get( cteLabel );
@@ -106,28 +117,29 @@ public abstract class AbstractSqmSelectQuery<T>
 		return cteStatements.values();
 	}
 
-	@Override
+	@Override @SuppressWarnings("unchecked")
 	public <X> JpaCteCriteria<X> getCteCriteria(String cteName) {
 		return (JpaCteCriteria<X>) cteStatements.get( cteName );
 	}
 
-	@Override
+	@Override @Deprecated
 	public <X> JpaCteCriteria<X> with(AbstractQuery<X> criteria) {
-		return withInternal( SqmCreationHelper.acquireUniqueAlias(), criteria );
+		// Use of acquireUniqueAlias() results in interpretation cache miss
+		return withInternal( "_" + SqmCreationHelper.acquireUniqueAlias(), criteria );
 	}
 
 	@Override
 	public <X> JpaCteCriteria<X> withRecursiveUnionAll(
 			AbstractQuery<X> baseCriteria,
 			Function<JpaCteCriteria<X>, AbstractQuery<X>> recursiveCriteriaProducer) {
-		return withInternal( SqmCreationHelper.acquireUniqueAlias(), baseCriteria, false, recursiveCriteriaProducer );
+		return withInternal( generateAlias(), baseCriteria, false, recursiveCriteriaProducer );
 	}
 
 	@Override
 	public <X> JpaCteCriteria<X> withRecursiveUnionDistinct(
 			AbstractQuery<X> baseCriteria,
 			Function<JpaCteCriteria<X>, AbstractQuery<X>> recursiveCriteriaProducer) {
-		return withInternal( SqmCreationHelper.acquireUniqueAlias(), baseCriteria, true, recursiveCriteriaProducer );
+		return withInternal( generateAlias(), baseCriteria, true, recursiveCriteriaProducer );
 	}
 
 	@Override
@@ -218,14 +230,53 @@ public abstract class AbstractSqmSelectQuery<T>
 	}
 
 	@Override
-	@SuppressWarnings("rawtypes")
 	public Set<Root<?>> getRoots() {
-		return (Set) getQuerySpec().getRoots();
+		return unmodifiableSet( getQuerySpec().getRoots() );
 	}
 
-	@SuppressWarnings("rawtypes")
-	public List<Root<?>> getRootList() {
-		return (List) getQuerySpec().getRootList();
+	/**
+	 * @see org.hibernate.query.criteria.JpaCriteriaQuery#getRootList()
+	 */
+	public List<? extends JpaRoot<?>> getRootList() {
+		return getQuerySpec().getRootList();
+	}
+
+	/**
+	 * @see org.hibernate.query.criteria.JpaCriteriaQuery#getRoot(int, Class)
+	 */
+	public <E> JpaRoot<? extends E> getRoot(int position, Class<E> type) {
+		final List<SqmRoot<?>> rootList = getQuerySpec().getRootList();
+		if ( rootList.size() <= position ) {
+			throw new IllegalArgumentException( "Not enough root entities" );
+		}
+		return castRoot( rootList.get( position ), type );
+	}
+
+	/**
+	 * @see org.hibernate.query.criteria.JpaCriteriaQuery#getRoot(String, Class)
+	 */
+	public <E> JpaRoot<? extends E> getRoot(String alias, Class<E> type) {
+		for ( SqmRoot<?> root : getQuerySpec().getRootList() ) {
+			final String rootAlias = root.getAlias();
+			if ( rootAlias != null && rootAlias.equals( alias ) ) {
+				return castRoot( root, type );
+			}
+		}
+		throw new IllegalArgumentException( "No root entity with alias " + alias );
+	}
+
+	private static <E> JpaRoot<? extends E> castRoot(JpaRoot<?> root, Class<E> type) {
+		final Class<?> rootEntityType = root.getJavaType();
+		if ( rootEntityType == null ) {
+			throw new AssertionFailure( "Java type of root entity was null" );
+		}
+		if ( !type.isAssignableFrom( rootEntityType ) ) {
+			throw new IllegalArgumentException( "Root entity of type '" + rootEntityType.getTypeName()
+												+ "' did not have the given type '" + type.getTypeName() + "'");
+		}
+		@SuppressWarnings("unchecked") // safe, we just checked
+		final JpaRoot<? extends E> result = (JpaRoot<? extends E>) root;
+		return result;
 	}
 
 	@Override
@@ -233,12 +284,11 @@ public abstract class AbstractSqmSelectQuery<T>
 		return addRoot(
 				new SqmRoot<>(
 						nodeBuilder().getDomainModel().entity( entityClass ),
-						null,
+						generateAlias(),
 						true,
 						nodeBuilder()
 				)
 		);
-
 	}
 
 	@Override
@@ -255,6 +305,13 @@ public abstract class AbstractSqmSelectQuery<T>
 		return root;
 	}
 
+	@Override
+	public <X> JpaFunctionRoot<X> from(JpaSetReturningFunction<X> function) {
+		final SqmFunctionRoot<X> root = new SqmFunctionRoot<>( (SqmSetReturningFunction<X>) function, null );
+		addRoot( root );
+		return root;
+	}
+
 	private <X> SqmRoot<X> addRoot(SqmRoot<X> root) {
 		getQuerySpec().addRoot( root );
 		return root;
@@ -262,14 +319,21 @@ public abstract class AbstractSqmSelectQuery<T>
 
 	@Override
 	public <X> SqmRoot<X> from(EntityType<X> entityType) {
-		return addRoot( new SqmRoot<>( (EntityDomainType<X>) entityType, null, true, nodeBuilder() ) );
+		return addRoot(
+				new SqmRoot<>(
+						(EntityDomainType<X>) entityType,
+						generateAlias(),
+						true,
+						nodeBuilder()
+				)
+		);
 	}
 
 	private void validateComplianceFromSubQuery() {
 		if ( nodeBuilder().isJpaQueryComplianceEnabled() ) {
 			throw new IllegalStateException(
-					"The JPA specification does not support subqueries in the from clause. " +
-							"Please disable the JPA query compliance if you want to use this feature." );
+					"The JPA specification does not support subqueries in the from clause. "
+					+ "Please disable the JPA query compliance if you want to use this feature." );
 		}
 	}
 
@@ -318,20 +382,19 @@ public abstract class AbstractSqmSelectQuery<T>
 	// Grouping
 
 	@Override
-	@SuppressWarnings("rawtypes")
 	public List<Expression<?>> getGroupList() {
-		return (List) getQuerySpec().getGroupingExpressions();
+		return unmodifiableList( getQuerySpec().getGroupingExpressions() );
 	}
 
 	@Override
 	public SqmSelectQuery<T> groupBy(Expression<?>... expressions) {
-		return groupBy( Arrays.asList( expressions ) );
+		getQuerySpec().setGroupingExpressions( List.of( expressions ) );
+		return this;
 	}
 
 	@Override
-	@SuppressWarnings("rawtypes")
 	public SqmSelectQuery<T> groupBy(List<Expression<?>> grouping) {
-		getQuerySpec().setGroupingExpressions( (List) grouping );
+		getQuerySpec().setGroupingExpressions( grouping );
 		return this;
 	}
 
@@ -352,76 +415,50 @@ public abstract class AbstractSqmSelectQuery<T>
 		return this;
 	}
 
-//
-//	// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-//	// Limit
-//
-//
-//	@Override
-//	@SuppressWarnings("unchecked")
-//	public <X> ExpressionImplementor<X> getLimit() {
-//		return limit;
-//	}
-//
-//	@Override
-//	public C setLimit(JpaExpression<?> limit) {
-//		this.limit = (ExpressionImplementor) limit;
-//		return this;
-//	}
-//
-//	@Override
-//	@SuppressWarnings("unchecked")
-//	public <X> ExpressionImplementor<X> getOffset() {
-//		return offset;
-//	}
-//
-//	@Override
-//	public C setOffset(JpaExpression offset) {
-//		this.offset = (ExpressionImplementor) offset;
-//		return this;
-//	}
-
-	public void appendHqlString(StringBuilder sb) {
+	public void appendHqlString(StringBuilder hql, SqmRenderContext context) {
 		if ( !cteStatements.isEmpty() ) {
-			sb.append( "with " );
+			hql.append( "with " );
 			for ( SqmCteStatement<?> value : cteStatements.values() ) {
-				value.appendHqlString( sb );
-				sb.append( ", " );
+				value.appendHqlString( hql, context );
+				hql.append( ", " );
 			}
-			sb.setLength( sb.length() - 2 );
+			hql.setLength( hql.length() - 2 );
 		}
-		sqmQueryPart.appendHqlString( sb );
+		sqmQueryPart.appendHqlString( hql, context );
 	}
 
+	@Override
+	public boolean equals(Object object) {
+		return object instanceof AbstractSqmSelectQuery<?> that
+			&& Objects.equals( this.resultType, that.resultType ) // for performance!
+			&& Objects.equals( this.sqmQueryPart, that.sqmQueryPart )
+			&& Objects.equals( this.cteStatements, that.cteStatements );
+	}
+
+	@Override
+	public int hashCode() {
+		return Objects.hash( cteStatements, sqmQueryPart );
+	}
+
+	@SuppressWarnings("unchecked")
 	protected Selection<? extends T> getResultSelection(Selection<?>[] selections) {
-		final Selection<? extends T> resultSelection;
-		Class<T> resultType = getResultType();
+		final Class<T> resultType = getResultType();
 		if ( resultType == null || resultType == Object.class ) {
-			switch ( selections.length ) {
-				case 0: {
-					throw new IllegalArgumentException(
-							"empty selections passed to criteria query typed as Object"
-					);
-				}
-				case 1: {
-					resultSelection = ( Selection<? extends T> ) selections[0];
-					break;
-				}
-				default: {
-					resultSelection = ( Selection<? extends T> ) nodeBuilder().array( selections );
-				}
-			}
+			return switch ( selections.length ) {
+				case 0 -> throw new IllegalArgumentException( "Empty selections passed to criteria query typed as Object" );
+				case 1 -> (Selection<? extends T>) selections[0];
+				default -> (Selection<? extends T>) nodeBuilder().array( selections );
+			};
 		}
 		else if ( Tuple.class.isAssignableFrom( resultType ) ) {
-			resultSelection = ( Selection<? extends T> ) nodeBuilder().tuple( selections );
+			return (Selection<? extends T>) nodeBuilder().tuple( selections );
 		}
 		else if ( resultType.isArray() ) {
-			resultSelection = nodeBuilder().array( resultType, selections );
+			return nodeBuilder().array( resultType, selections );
 		}
 		else {
-			resultSelection = nodeBuilder().construct( resultType, selections );
+			return nodeBuilder().construct( resultType, selections );
 		}
-		return resultSelection;
 	}
 
 }
